Prevent additional search result text from overflowing dialog [#106236856]

--- a/src/stylus/components/image-browser.styl
+++ b/src/stylus/components/image-browser.styl
@@ -15,7 +15,7 @@
       modal-button()
 
   .image-search-dialog-results
-    margin 20px 0
+    margin 20px 0 12px
     max-height 220px
     overflow none
     &.show-all
